--- a/oppencv读取图片.ipynb
+++ b/oppencv读取图片.ipynb
@@ -71,7 +71,7 @@
     "    return type(img), img.shape, img\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    path = 'img1.jpg'\n",
+    "    path = './data/img1.jpg'\n",
     "    img_type, img_shape, img = read_img(path)\n",
     "    print('img_type: {}'.format(img_type))\n",
     "    print('img_shape: {}'.format(img_shape))\n",
