--- a/绘制线性图.ipynb
+++ b/绘制线性图.ipynb
@@ -37,7 +37,7 @@
     "plt.ylim(-5, 5)\n",
     "plt.legend()\n",
     "plt.grid()\n",
-    "plt.savefig('ch_plot.png', format='png', dpi=500)\n",
+    "plt.savefig('out.png', format='png', dpi=500)\n",
     "plt.show()"
    ]
   }
