--- a/OpenCV读取图片和保存图片.ipynb
+++ b/OpenCV读取图片和保存图片.ipynb
@@ -77,6 +77,23 @@
     "    print('img_shape: {}'.format(img_shape))\n",
     "    print('img: {}'.format(img))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "\n",
+    "def save_img(in_path, out_path):\n",
+    "    img = cv2.imread(in_path)\n",
+    "    cv2.imwrite(out_path, img)\n",
+    "if __name__ == '__main__':\n",
+    "    in_path = './data/img1.jpg'\n",
+    "    out_path = 'save.jpg'\n",
+    "    save_img(in_path, out_path)"
+   ]
   }
  ],
  "metadata": {
