--- a/Excel文件的操作.ipynb
+++ b/Excel文件的操作.ipynb
@@ -9,26 +9,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "文件路径：./data/人口.xlsx\n",
-      "表格名称：['Sheet1']\n",
-      "tabel name: Sheet1\n",
-      "table row: 7, table col: 3\n",
-      "row info: ['城市', '人口（万）', '日期']\n",
-      "col info: ['城市', '天津市', '上海市', '北京市', '重庆市', '深圳市', '成都市']\n",
-      "All data: 城市\n",
-      "one row: [text:'城市', text:'人口（万）', text:'日期']\n",
-      "one row: [text:'城市', text:'人口（万）', text:'日期']\n",
-      "one row value: 城市\n",
-      "one col: [text:'城市', text:'天津市', text:'上海市', text:'北京市', text:'重庆市', text:'深圳市', text:'成都市']\n",
-      "one col value: 城市\n",
-      "data type: array('B', [1, 1, 1])\n"
+      "usage: ipykernel_launcher.py [-h] [--path PATH]\n",
+      "ipykernel_launcher.py: error: unrecognized arguments: -f C:\\Users\\芳宏\\AppData\\Roaming\\jupyter\\runtime\\kernel-3d16a909-9859-47b4-afc2-610f8190432e.json\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "2",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 2\n"
      ]
     }
    ],
